tests/datakinds/should_fail/DataKind6.hs
{-# LANGUAGE DataKinds #-}

module DataKind6 where

data kind K = K

data kind A
data kind B = A
